# wm-notecards

./: .aiignore  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  design-qa.md  pyproject.toml  setup_project.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
docs/: BEAUTIFUL_DATA_SCIENCE_SETUP.md  CANONICAL_FOUNDATION.md  COLAB_COMPATIBILITY.md  COLOR_AND_ENCODING_PLAN.md  LAUNCH_PRODUCT_SPEC.md  OPEN_SOURCE_GRAPH_CHECKLIST.md  PUBLISHING_AND_MOTION.md  ROADMAP.md  SCRATCH_AND_SHARE_NOTEBOOKS.md  SCREENSHOT_AUDIT.md
examples/: 40_column_eda_scratchbook.html  40_column_eda_scratchbook.ipynb  40_column_eda_scratchbook_COLAB.ipynb  logistic_regression_thinking_interface.html  logistic_regression_thinking_interface.ipynb  simple_seasonal_forecasting_lab.executed.html  simple_seasonal_forecasting_lab.ipynb  simple_seasonal_forecasting_lab_COLAB.ipynb
scripts/: build_colab_bootstrap.py  build_eda_before_after_demo.py  build_logistic_thinking_interface.py  build_qa_gallery.py  build_readme_demo.py  build_readme_eda_proof.py  build_synthetic_seasonal_demo.py  build_zerve_notebook.py  sync_vendor_runtime.py
showcase/: index.html
skills/notecard-teacher-style/: SKILL.md
skills/notecard-teacher-style/agents/: openai.yaml
skills/notecard-teacher-style/references/: eda-and-text-contract.md  portable-and-host-contract.md  release-contract.md  scratch-and-share-contract.md  story-grammar.md
skills/wilton-campaign-persuasion/: SKILL.md
skills/wilton-campaign-persuasion/agents/: openai.yaml
skills/wilton-campaign-persuasion/references/: visual-campaign-pairs.md  voice-evidence.md
src/wm_notecards/: __init__.py  _colors.py  _html.py  _types.py  boot.py  cards.py  charts.py  cli.py  eda.py  icons.py  kicker.py  pictogram.py  rendering.py  tables.py  theme.py
tests/: conftest.py  test_cards.py  test_charts.py  test_cli.py  test_colab_builder.py  test_eda.py  test_eda_demo_builder.py  test_logistic_thinking_interface_builder.py  test_sync_vendor_runtime.py  test_tables.py  test_visual_primitives.py
