[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wm-notecards"
version = "0.1.0"
description = "A visual storytelling system for data-science notebooks — question-first, lead-first, human-first."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Wilton Moore"},
]
keywords = [
    "notebook",
    "data-visualization",
    "jupyter",
    "colab",
    "cards",
    "storytelling",
    "plotly",
    "pandas",
    "accessibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "plotly>=5.0",
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "ipython>=8.0",
    "Pillow>=9.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
svg = ["kaleido>=0.2"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas-stubs>=2.0",
]

[project.urls]
Homepage = "https://github.com/jsmash/wm-notecards"
Documentation = "https://github.com/jsmash/wm-notecards#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "I", "N", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["wm_notecards"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "plotly.*",
    "matplotlib.*",
    "PIL.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["wm_notecards"]

[tool.coverage.report]
fail_under = 70
show_missing = true
